--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "parse-server-example",
-  "version": "1.0.0",
   "version": "1.4.0",
   "description": "An example Parse API server using the parse-server module",
   "main": "index.js",
@@ -10,12 +9,15 @@
   },
   "license": "MIT",
   "dependencies": {
+    "apn": "^1.5.2",
+    "cron": "^1.1.0",
     "express": "~4.11.x",
     "kerberos": "~0.0.x",
+    "nodemailer": "^2.5.0",
     "parse": "~1.8.0",
-    "parse-server": "~2.2.12",
-
-    "apn": "^1.5.2",
+    "parse-server": "~2.2.12"
+  },
+  "devDependencies": {
     "node-gcm": "^0.9.11",
     "c2dm": "^1.2.1",
     "mpns": "^2.1.0",
