--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "express": "~4.11.x",
     "kerberos": "~0.0.x",
     "nodemailer": "^2.5.0",
-    "parse": "~1.8.0",
-    "parse-server": "~2.2.12"
+    "parse": "1.8.0",
+    "parse-server": "2.2.12"
   },
   "devDependencies": {
     "cron": "^1.1.0",
